--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Anselmo - Full stack Designer</title>
   <meta name="description" content="Desenvolvedor Front End | Product designer">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
